minio-ingress.yml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issuer: gitlab-issuer
    kubernetes.io/ingress.provider: nginx
    meta.helm.sh/release-name: gitlab
    meta.helm.sh/release-namespace: gitlab
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
  generation: 2
  labels:
    app: minio
    app.kubernetes.io/managed-by: Helm
    chart: minio-0.4.3
    heritage: Helm
    release: gitlab
  name: gitlab-minio
  namespace: gitlab
spec:
  ingressClassName: gitlab-nginx
  rules:
  - host: minio.decodedevops.com
    http:
      paths:
      - backend:
          service:
            name: cm-acme-http-solver-hw588
            port:
              number: 8089
        path: /.well-known/acme-challenge/sAAhHRVZVKORjHa5uDpurfItpxAsowgM_66VnIulK4s
        pathType: ImplementationSpecific
      - backend:
          service:
            name: gitlab-minio-svc
            port:
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - minio.decodedevops.com
    secretName: gitlab-minio-tls
